--- a/OCMS/VIEW/frmConsultation.resx
+++ b/OCMS/VIEW/frmConsultation.resx
@@ -208,6 +208,9 @@
         6HFDJsJCXNy39T2NEWNFRFCqowqgYAHpXlnqH//Z
 </value>
   </data>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAQEAYABgAAD/4QCmRXhpZgAATU0AKgAAAAgABgE+AAUAAAACAAAAVgE/AAUAAAAG
